<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="web_client_id">941886594932-7691tdark1dibfn299f9cf4mclkdclh6.apps.googleusercontent.com</string>

    <!--titles and labels-->
    <string name="app_name">GeMAS List</string>
    <string name="login">Sign in</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="user_id">User ID</string>
    <string name="password">Password</string>
    <string name="signUp">Sign Up</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="animeList">Anime List</string>
    <string name="gameList">Game List</string>
    <string name="movieList">Movie List</string>
    <string name="seriesList">Series List</string>
    <string name="menu">Menu</string>
    <string name="dashboard">Dashboard</string>
    <string name="games">Games</string>
    <string name="movies">Movies</string>
    <string name="series">Series</string>
    <string name="anime">Anime</string>
    <string name="profile">Profile</string>
    <string name="logout">Sign out</string>
    <string name="app">Utility</string>
    <string name="completed">Completed</string>
    <string name="planning">Planning</string>
    <string name="watching">Watching</string>
    <string name="progress">Progress</string>
    <string name="rating">Rating</string>
    <string name="status">Status</string>
    <string name="average_rating">Average Rating</string>
    <string name="statistics">Statistics</string>
    <string name="anime_statistics">Anime Statistics</string>
    <string name="total_anime_watched">Total Anime</string>
    <string name="mean_score">Mean Score</string>
    <string name="total_ratings">Total Ratings</string>
    <string name="rating_distribution">Rating Distribution</string>
    <string name="select">Select</string>
    <string name="search">Search</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>
    <string name="add_a_new_title">Add A New Title</string>
    <string name="title_name">Title Name</string>
    <string name="type">Type</string>
    <string name="description">Description</string>
    <string name="select_image">Select Image</string>
    <string name="linear_preview">Linear Preview</string>
    <string name="grid_preview">Grid Preview</string>
    <string name="add_title">Add title</string>
    <string name="episode_count">Episode Count</string>
    <string name="romaji_name">Romaji name</string>
    <string name="romaji">Romaji</string>
    <string name="unrated">Unrated</string>
    <string name="not_started">Not Started</string>
    <!--//-->
    <string name="MovieDescription">A small description about the movie.</string>
    <string name="Watched">Watched</string>
    <string name="WatchTime">Watch Time</string>
    <!--//-->
    <string name="series_statistics">Tv Series Review</string>
    <string name="stat_value">10</string>
    <string name="series_name01">My Name</string>
    <string name="series_name02">Peaky Blinders</string>
    <string name="series_name03">Tomorrow</string>
    <string name="Rating">Rating</string>
    <string name="ratingValue">8/10</string>
    <string name="Save">Save</string>
    <string name="globalRating">Global Rating</string>
    <string name="RatingValue">9.7</string>
    <string name="statMovie">Movie Statistics</string>
    <string name="statValue">20</string>
    <string name="Text">Search</string>
    <string name="noResult">No Result</string>
    <string name="ratingValue02">7/10</string>
    <string name="rate_value">8.7</string>
    <string name="edit_prof_pic">Edit Profile Picture</string>
    <string name="name_user">Name</string>
    <string name="series_desc">MY NAME is a South Korean series about a young woman seeking revenge for her father\'s death with the help of organized crime. When 17-year-old Yoon Ji-woo (Han So-hee) witnesses her gangster father\'s murder, she\'s determined to find his killer. The police have no leads so she turns to her father\'s best friend, Choi Mu-jin (Hee-soon Park), the head of Dongcheon, Korea\'s biggest drug ring</string>



    <!--content descriptions-->
    <string name="logo">App Logo</string>
    <string name="openNavDrawer">Navigation Drawer Open</string>
    <string name="closeNavDrawer">Navigation Drawer Close</string>
    <string name="navigation_drawer_profile_banner">Navigation Drawer Profile Banner</string>
    <string name="navigation_drawer_profile_picture">Navigation Drawer Profile Picture</string>
    <string name="profile_banner">Navigation view profile banner</string>
    <string name="search_button">Search Button</string>
    <!--//-->
    <string name="MovieName">Beauty and the Beast</string>

    <!--button labels-->
    <string name="save">Save</string>
    <string name="favourite">Favourite</string>
    <string name="remove">Remove</string>
    <string name="sign_in">Sign in</string>
    <string name="clear_selection">Clear Selection</string>
    <!--//-->
    <string name="gotoFile">gotoFile</string>

    <!--messages-->
    <string name="invalid_password">Invalid Password</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="network_error">Network Error</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="fill_all_fields">Fill all fields</string>
    <string name="tap_image_to_resize">*tap image to resize</string>
    <string name="error">Error</string>
    <string name="network_connected">Network Connected</string>
    <string name="user_data_error">Could not load user data</string>
    <string name="network_disconnected">Network Disconnected</string>
    <string name="image_reselect">There was an error\nReselect the image</string>
    <string name="image_select">Please select an image</string>
    <string name="signed_in">Signed In as %s</string>
    <string name="are_you_sure">Are You Sure?</string>
    <string name="edit_anime_title">Edit Anime Title</string>
    <string name="delete_title">Permanently Delete Title</string>
    <string name="delete_title_warning">WARNING!\nThis will permanently delete this title. All users who have this on their list will be affected.</string>
    <string name="successful">Successful</string>
    <!--//-->
    <string name="update_prof">Edit Profile</string>
    <string name="change_pass">Change My Password</string>
    <string name="deleteAcc">Delete My Account</string>
    <!--//-->
    <string name="searchMessage">Sorry! Couldnot find</string>
    <string name="gameStatistics">Game Statistics</string>
    <string name="totalGames">Total Games</string>
    <string name="meanScore">Mean Score</string>
    <string name="totalGamesValue">120</string>
    <string name="gamesMeanVAlue">8.7</string>
    <string name="PlayingValue">10</string>
    <string name="PlanningValue">20</string>
    <string name="CompletedValue">30</string>
    <string name="stats">Games Statistics</string>
    <string name="Game">Game</string>
    <string name="rate">rate</string>
    <string name="game_des">game_des</string>
    <string name="series_name04">Business Proposal</string>
    <string name="removed_from_list">removed from list</string>
    <string name="enter_title">Enter a title</string>
    <string name="latest_entries">Latest Entries</string>
    <string name="edit_banner">Edit Banner</string>

    <string name="statsGames">Games Stats</string>


</resources>