<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginRight="10dp"
    android:orientation="vertical"
    tools:context=".games_description">

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Game" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="167dp"
            android:layout_height="122dp"
            android:src="@drawable/wp2462450" />

        <LinearLayout
            android:layout_width="240dp"
            android:layout_height="120dp"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/spinner4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView27"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/Rating" />

                <EditText
                    android:id="@+id/editTextNumberDecimal"
                    android:layout_width="81dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:minHeight="48dp"
                    android:text="@string/rate"
                    tools:ignore="TouchTargetSizeCheck" />

            </LinearLayout>

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="50dp"
                android:text="@string/favourite" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button15"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="170dp"
        android:text="@string/Save" />

    <View
        android:id="@+id/divider8"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="270dp"
        android:layout_marginRight="10dp"
        android:background="?android:attr/listDivider" />

    <View
        android:id="@+id/divider9"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="450dp"
        android:layout_marginRight="30dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="match_parent"
        android:layout_height="87dp"
        android:layout_marginTop="300dp"
        android:text="@string/game_des" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="470dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView34"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:text="@string/globalRating" />

        <TextView
            android:id="@+id/textView33"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="150dp"
            android:text="@string/RatingValue"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button16"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="70dp"
            android:text="@string/remove"
            app:icon="@drawable/ic_baseline_delete_24" />
    </LinearLayout>

</FrameLayout>