<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".series_description">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:shadowColor="@color/black"
        android:text="@string/series_name01"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/divider6"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="30dp"
        android:background="@color/black"
        android:backgroundTint="@color/black" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="128dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="167dp"
            android:layout_height="122dp"
            android:foreground="@drawable/my_name"
            android:src="@drawable/beauty" />

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="120dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:contentDescription="@string/Watched"
                android:spinnerMode="dropdown" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Rating"
                    android:textColor="@color/grey_dark" />

                <EditText
                    android:id="@+id/editTextNumber2"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number"
                    android:text="@string/ratingValue02" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView34"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="210dp"
            android:layout_marginTop="180dp"
            android:background="@color/grey_light" />

        <TextView
            android:id="@+id/textView35"
            android:layout_width="65dp"
            android:layout_height="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="180dp"
            android:text="@string/favourite" />
    </LinearLayout>

    <Button
        android:id="@+id/button7"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginTop="250dp"
        android:text="@string/Save"
        app:cornerRadius="20dp" />

    <View
        android:id="@+id/divider7"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="300dp"
        android:background="@color/black"
        android:foregroundTint="#0C0C0C" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView39"
            android:layout_width="match_parent"
            android:layout_height="144dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="350dp"
            android:text="@string/series_desc"
            android:textColor="#100E0E"
            android:textStyle="normal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="500dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="05dp"
            android:layout_marginTop="31dp"
            android:layout_weight="1"
            android:text="@string/globalRating"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="40dp"
            android:layout_height="2dp"
            android:layout_marginLeft="200dp"
            android:layout_weight="3"
            android:text="@string/rate_value"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/button8"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginTop="680dp"
        android:background="@color/black"
        android:foregroundTint="#121111"
        android:text="@string/remove"
        app:cornerRadius="50dp" />

</FrameLayout>