<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginRight="10dp"
    android:orientation="vertical"
    tools:context=".MovieDescription">

    <TextView
        android:id="@+id/MovieTitletextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/MovieName"
        android:textColor="@color/black"
        android:layout_marginTop="20sp"
        android:textStyle="bold"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="126dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/MovieimageView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/beauty" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Rating" />

                <EditText
                    android:id="@+id/editRating"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number"
                    tools:ignore="SpeakableTextPresentCheck" />
            </LinearLayout>

            <CheckBox
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="Favourite" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/Savebutton5"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0"
        android:text="@string/Save"
        app:cornerRadius="20dp" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:background="@color/black"
        android:backgroundTint="@color/black" />

    <TextView
        android:id="@+id/movieDescriptiontextView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/MovieDescription"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16dp" />

    <Button
        android:id="@+id/removeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="100dp"
        android:text="@string/remove"
        app:cornerRadius="20dp"
        app:icon="@drawable/ic_baseline_delete_24" />

</LinearLayout>