<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/placeholder_image" />

            <ImageView
                android:id="@+id/profile_banner"
                android:layout_width="350dp"
                android:layout_height="180dp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/profile_banner"
                app:srcCompat="@drawable/default_background"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="169dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/banner_edit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_banner" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textStyle="normal|bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-light"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/username"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/profile_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-light"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/email"
                android:textSize="20sp"/>

        </LinearLayout>

    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>